// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OmniSearch renders correctly when dropdown is provided 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div />
  .c8 {
  cursor: inherit;
  display: inline-block;
  height: 18px;
  width: 18px;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
}

.c4 {
  width: 100%;
  position: relative;
  border-radius: 4px;
  border: 1px solid transparent;
  padding: 0.7rem 1rem;
  box-sizing: border-box;
  background-color: #f2f2f2;
  color: #1a1a1a;
  font-size: 1.4rem;
  line-height: 2rem;
  -webkit-transition: border 0.25s ease;
  transition: border 0.25s ease;
  min-height: 3.6rem;
}

.c4:hover {
  border: 1px solid #cccccc;
}

.c4:focus,
.c4:active {
  outline: none;
  background-color: #ffffff;
  border: 1px solid #5ab2f2;
  box-shadow: 0 0 2px #0066ff;
}

.c4:disabled {
  cursor: not-allowed;
  background-color: #f2f2f2;
  border: 1px solid transparent;
  box-shadow: none;
  resize: none;
}

.c4::-webkit-input-placeholder {
  color: #a6a6a6;
}

.c4::-moz-placeholder {
  color: #a6a6a6;
}

.c4:-ms-input-placeholder {
  color: #a6a6a6;
}

.c4::placeholder {
  color: #a6a6a6;
}

.c4::selection {
  background-color: #d1e1fa;
}

.c4[type="number"]::-webkit-inner-spin-button {
  min-height: 3.6rem;
}

.c2 {
  display: inline-block;
  width: 100%;
  position: relative;
}

.c2 input {
  padding-right: 3.8rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c6 {
  display: inline-block;
  height: 18px;
  width: 18px;
  border-radius: 50%;
  background-color: #e5e5e5;
}

.c7 {
  cursor: pointer;
}

.c0 .rc-dialog-body {
  padding: 7px 0;
}

.c1 {
  padding: 0.7rem 1.4rem;
}

<div>
    <div>
      <div
        class="rc-dialog-mask"
      />
      <div
        class="rc-dialog-wrap "
        role="dialog"
        tabindex="-1"
      >
        <div
          class="rc-dialog c0"
          role="document"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden;"
            tabindex="0"
          />
          <div
            class="rc-dialog-content"
          >
            <div
              class="rc-dialog-body"
            >
              <div
                class="c1"
              >
                <span
                  class="c2"
                >
                  <span
                    class="c3"
                    type="search"
                  >
                    <input
                      class="c4"
                      placeholder="Search for a report"
                      role="search"
                      type="text"
                      value="demo"
                    />
                  </span>
                  <span
                    class="c5"
                  >
                    <span
                      class="c6"
                    >
                      <span
                        class="c7 c8"
                        fill="#000000"
                        height="18px"
                        type="oClose"
                        width="18px"
                      >
                        <svg
                          fill="#000000"
                          height="18px"
                          viewBox="0 0 24 24"
                          width="18px"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
              <div
                data-testid="omnisearch-dropdown"
              />
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`OmniSearch renders correctly when visible is false 1`] = `
<body>
  <div />
</body>
`;

exports[`OmniSearch renders correctly when visible is true 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div />
  .c8 {
  cursor: inherit;
  display: inline-block;
  height: 18px;
  width: 18px;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
}

.c4 {
  width: 100%;
  position: relative;
  border-radius: 4px;
  border: 1px solid transparent;
  padding: 0.7rem 1rem;
  box-sizing: border-box;
  background-color: #f2f2f2;
  color: #1a1a1a;
  font-size: 1.4rem;
  line-height: 2rem;
  -webkit-transition: border 0.25s ease;
  transition: border 0.25s ease;
  min-height: 3.6rem;
}

.c4:hover {
  border: 1px solid #cccccc;
}

.c4:focus,
.c4:active {
  outline: none;
  background-color: #ffffff;
  border: 1px solid #5ab2f2;
  box-shadow: 0 0 2px #0066ff;
}

.c4:disabled {
  cursor: not-allowed;
  background-color: #f2f2f2;
  border: 1px solid transparent;
  box-shadow: none;
  resize: none;
}

.c4::-webkit-input-placeholder {
  color: #a6a6a6;
}

.c4::-moz-placeholder {
  color: #a6a6a6;
}

.c4:-ms-input-placeholder {
  color: #a6a6a6;
}

.c4::placeholder {
  color: #a6a6a6;
}

.c4::selection {
  background-color: #d1e1fa;
}

.c4[type="number"]::-webkit-inner-spin-button {
  min-height: 3.6rem;
}

.c2 {
  display: inline-block;
  width: 100%;
  position: relative;
}

.c2 input {
  padding-right: 3.8rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c6 {
  display: inline-block;
  height: 18px;
  width: 18px;
  border-radius: 50%;
  background-color: #e5e5e5;
}

.c7 {
  cursor: pointer;
}

.c0 .rc-dialog-body {
  padding: 7px 0;
}

.c1 {
  padding: 0.7rem 1.4rem;
}

<div>
    <div>
      <div
        class="rc-dialog-mask"
      />
      <div
        class="rc-dialog-wrap "
        role="dialog"
        tabindex="-1"
      >
        <div
          class="rc-dialog c0"
          role="document"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden;"
            tabindex="0"
          />
          <div
            class="rc-dialog-content"
          >
            <div
              class="rc-dialog-body"
            >
              <div
                class="c1"
              >
                <span
                  class="c2"
                >
                  <span
                    class="c3"
                    type="search"
                  >
                    <input
                      class="c4"
                      placeholder="Search for a report"
                      role="search"
                      type="text"
                      value="demo"
                    />
                  </span>
                  <span
                    class="c5"
                  >
                    <span
                      class="c6"
                    >
                      <span
                        class="c7 c8"
                        fill="#000000"
                        height="18px"
                        type="oClose"
                        width="18px"
                      >
                        <svg
                          fill="#000000"
                          height="18px"
                          viewBox="0 0 24 24"
                          width="18px"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
